--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registro Aplicacion</title>
+    <title>Ventana Control de Acceso</title>
+    <link rel="stylesheet" th:heref ="@{/style.css}">
 </head>
 <body>
+<div class="contenido">
+    <h1>Control de Acceso</h1>
+    <form th:action="@{/registro}" th:object="${usuario}" method="post">
+
+        <label for="username">Usuario</label>
+        <input type="text" id="username" th:field="*~{username}">required>
+
+        <label for="password">Contraseña</label>
+        <input type="text" id="password" th:field="*~{password}">required>
 
 
+        <button type="submit">ACEPTAR ✔</button>
 
+
+    </form>
+</div>
 </body>
 </html>
