--- a/src/main/resources/templates/acceso.html
+++ b/src/main/resources/templates/acceso.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Ventana Control de Acceso</title>
 
-    <link rel="stylesheet" th:heref ="@{/style.css}">
+    <link rel="stylesheet" th:href ="@{/controlAcceso.css}">
 </head>
 <body>
    <div class="contenido">
@@ -12,12 +12,12 @@
        <h2>Control de acceso</h2>
 
        <div class="icono">
-           <img src="/img/lock.png" alt="candado" width="90">
+           <img src="/img/lockAbierto.jpg" alt="candado" width="90">
        </div>
 
        <p>Acceso permitido a la aplicación.</p>
 
-       <form th:action="@{/piramide}" method="get">
+       <form th:action="@{/registro/piramide}" method="get">
            <button type="submit" class="btn">ACEPTAR ✔</button>
        </form>
 
