--- a/src/main/resources/templates/piramide.html
+++ b/src/main/resources/templates/piramide.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Pintar Piramide</title>
 
-    <link rel="stylesheet" th:heref ="@{/style.css}">
+    <link rel="stylesheet" th:heref ="@{/}">
 </head>
 <body>
 
 <div class="container">
     <h2>Pinta una pirámide</h2>
 
-    <form th:action="@{/piramide}" method="post">
+    <form th:action="@{/registro/piramide}" method="post">
 
         <label for="altura">Altura</label>
-        <input type="number" id="altura" name="altura"requiered>
+        <input type="number" id="altura" th:text="${altura}"required>
 
         <button type="submit" class="btn">ACEPTAR ✔</button>
 
@@ -25,5 +25,3 @@
 </body>
 </html>
 
-<label for="username">Usuario</label>
-<input type="text" id="username" th:field="*~{username}">required>
