--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ventana Control de Acceso</title>
-    <link rel="stylesheet" th:heref ="@{/style.css}">
+    <link rel="stylesheet" th:href="@{/estiloRegistro.css}">
 </head>
 <body>
 <div class="contenido">
@@ -11,16 +11,18 @@
     <form th:action="@{/registro}" th:object="${usuario}" method="post">
 
         <label for="username">Usuario</label>
-        <input type="text" id="username" th:field="*~{username}">required>
+        <input type="text" id="username" th:field="*{usuario}"required>
 
         <label for="password">Contraseña</label>
-        <input type="text" id="password" th:field="*~{password}">required>
+        <input type="text" id="password" th:field="*{password}"required>
 
 
         <button type="submit">ACEPTAR ✔</button>
 
 
     </form>
+
+    <div class="salida" th:if="${nombre}"><span th:text="${nombre}"></span></div>
 </div>
 </body>
 </html>
